复制功能去除

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<a class="jiathis_button_weixin fx1"></a>
 			<a class="jiathis_button_tsina fx2"></a>
 			<a class="jiathis_button_tsina fx3"></a>
-			<a onClick="copy_clip('www.baidu.com');alert('¹§Ï²£¬¸´ÖÆ³É¹¦£¡');" class="fx4"></a>
+			<a  class="fx4"></a>
 		</div>
 		<div class="moiveBG">	
 			<div class="close"></div>
@@ -64,38 +64,7 @@ $(".moiveBG .close ").click(function(){
 	$(".moiveBG").fadeOut("slow");
 	$("#videoM").get(0).pause();
 })
-function copy_clip(txt) {
-    if (window.clipboardData) {
-            window.clipboardData.clearData();
-            window.clipboardData.setData("Text", txt);
-    } else if (navigator.userAgent.indexOf("Opera") != -1) {
-            window.location = txt;
-    } else if (window.netscape) {
-            try {
-                    netscape.security.PrivilegeManager.enablePrivilege("UniversalXPConnect");
-            } catch (e) {
-                    alert("ÄúµÄfirefox°²È«ÏÞÖÆÏÞÖÆÄú½øÐÐ¼ôÌù°å²Ù×÷£¬ÇëÔÚÐÂ´°¿ÚµÄµØÖ·À¸ÀïÊäÈë'about:config'È»ºóÕÒµ½'signed.applets.codebase_principal_support'ÉèÖÃÎªtrue'");
-                    return false;
-            }
-            var clip = Components.classes["@mozilla.org/widget/clipboard;1"].createInstance(Components.interfaces.nsIClipboard);
-            if (!clip)
-                    return;
-            var trans = Components.classes["@mozilla.org/widget/transferable;1"].createInstance(Components.interfaces.nsITransferable);
-            if (!trans)
-                    return;
-            trans.addDataFlavor('text/unicode');
-            var str = new Object();
-            var len = new Object();
-            var str = Components.classes["@mozilla.org/supports-string;1"].createInstance(Components.interfaces.nsISupportsString);
-            var copytext = txt;
-            str.data = copytext;
-            trans.setTransferData("text/unicode", str, copytext.length * 2);
-            var clipid = Components.interfaces.nsIClipboard;
-            if (!clip)
-                    return false;
-            clip.setData(trans, null, clipid.kGlobalClipboard);
-    }
-}
+
 </script>
 </html>
 
