--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<a href="https://api.mch.weixin.qq.com/pay/unifiedorder">支付链接</a>
+	<a href="weixin://http://weixin.qq.com">支付链接</a>
 </body>
 
 </html>
